--- a/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -7,5 +7,6 @@ include::openshift-do-command-line.asciidoc[]
 include::openshift-pipelines-tekton.asciidoc[]
 include::camelk.asciidoc[]
 include::camelkocpserverlesseventing.asciidoc[]
+include::camelkocpserverlessservice.asciidoc[]
 
 
