--- a/documentationbasic/ocp4devex/src/main/asciidoc/pvs.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/pvs.asciidoc
@@ -1,6 +1,8 @@
 
 == Understanding Persistent Volumes
 
+Author: Ian Lawson (feedback to ian.lawson@redhat.com)
+
 === Introduction
 
 If you are not already logged on go to the UI URL {webConsoleUrl} and logon as userx (x is the number provided to you) and password openshift. 
