Tidied up pre-reqs, moved the git clone into the pre-req, tidied and corrected dockerfile

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/camelk.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/camelk.asciidoc
@@ -1,5 +1,7 @@
 == Camel K on Openshift
 
+Author: Phil Prosser (feedback to pprosser@redhat.com)
+
 === Introduction
 
 Apache Camel K is a lightweight integration framework built from Apache Camel that runs natively on Kubernetes and is specifically designed for serverless and microservice architectures.
